# Issykrelax

./: .env.example  .env.production  .gitignore  STATUS.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0f6a7b8c9d0e_add_guide_profiles_and_tours.py  1a7b8c9d0e1f_add_activity_provider_and_activities.py  2a8b3c4d5e6f_add_contact_fields_to_properties.py  2b8c9d0e1f2a_add_restaurant_partner_and_restaurants.py  31f7c1807a62_initial_mvp.py  3c9d0e1f2a3b_add_agency_concierge_translator.py  5a1b2c3d4e5f_add_rating_stages_favorites.py  6b2c3d4e5f6a_add_roles_user_roles_permissions.py  7c3d4e5f6a7b_refactor_wallet_and_transactions.py  8d4e5f6a7b8c_extend_bookings_for_polymorphic.py  9599b1907258_add_guest_owner_confirmed_to_bookings.py  9e5f6a7b8c9d_add_driver_profiles_and_transfers.py  acbd1234e5f6_add_reset_token_to_users.py  ae483ab1cb20_change_property_media_url_to_text.py  bf1c2d3e4f5g_add_missing_indexes.py
backend/app/: main.py
backend/app/application/dto/: admin_dto.py  auth_dto.py  booking_dto.py  favorite_dto.py  owner_dto.py  property_dto.py  review_dto.py
backend/app/core/: celery.py  config.py  database.py  redis.py  security.py
backend/app/domain/entities/: __init__.py  activity.py  activity_provider_profile.py  agency_profile.py  amenity.py  booking.py  category.py  city.py  concierge_profile.py  (+18 more)
backend/plan/: MEMORY.md  SCHEMA.md  TASKS.md
backend/scripts/: seed.py  seed_roles.py
backend/tests/: conftest.py
(+238 files in other folders)
